Update Colors and remove icons

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </section>
 
 
-        <section class="section" id="certifications">
+        <!-- <section class="section" id="certifications">
             <div class="timeline" id="certifications-timeline">
                 </div>
-        </section>
+        </section> -->
 
     </div> <footer>
         <p>&copy; 2025 Vishwak Balaji Jayasankar. All rights reserved.</p>
